--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jshint": "^2.9.2",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
-    "strip-loader": "^0.1.2"
+    "source-map-loader": "^0.1.5",
+    "strip-loader": "^0.1.2",
+    "ts-loader": "^0.8.2"
   }
 }
