--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "This project is to complie scss/typescript/es6/img base64 to build a cross browser files",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base dist/",
-    "prod": "webpack --config webpack-production.config.js -p"
+    "test:lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore --cache",
+    "build": "webpack -p --config webpack.production.config.js --progress --profile --colors",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base dist/"
   },
   "author": "Max",
   "license": "MIT",
@@ -21,12 +21,21 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "bootstrap": "^3.3.6",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.1.1",
+    "eslint-plugin-react": "^5.2.2",
+    "file-loader": "^0.9.0",
     "jquery": "^3.1.0",
     "jshint": "^2.9.2",
     "jshint-loader": "^0.8.3",
+    "json-loader": "^0.5.4",
+    "json5-loader": "^0.6.0",
+    "jsx-loader": "^0.13.2",
     "node-libs-browser": "^1.0.0",
+    "react-hot-loader": "^1.3.0",
     "source-map-loader": "^0.1.5",
-    "strip-loader": "^0.1.2",
-    "ts-loader": "^0.8.2"
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7"
   }
 }
