--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
@@ -28,7 +29,8 @@
     "eslint-loader": "^1.4.1",
     "eslint-plugin-react": "^5.2.2",
     "file-loader": "^0.9.0",
-    "jquery": "^3.1.0",
+    "img-loader": "^1.3.1",
+    "jquery": "^2.2.4",
     "jshint": "^2.9.2",
     "jshint-loader": "^0.8.3",
     "json-loader": "^0.5.4",
@@ -39,6 +41,8 @@
     "sass-loader": "^4.0.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
+    "svgo": "^0.6.6",
+    "svgo-loader": "^1.1.0",
     "url-loader": "^0.5.7"
   }
 }
