--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "bootstrap": "^3.3.6",
+    "compass-mixins": "^0.12.10",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "eslint": "^3.1.1",
     "eslint-loader": "^1.4.1",
     "eslint-plugin-react": "^5.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "img-loader": "^1.3.1",
+    "ionicons": "^2.0.1",
     "jquery": "^2.2.4",
     "jshint": "^2.9.2",
     "jshint-loader": "^0.8.3",
@@ -37,6 +40,7 @@
     "json5-loader": "^0.6.0",
     "jsx-loader": "^0.13.2",
     "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.8.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^4.0.0",
     "source-map-loader": "^0.1.5",
