--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "style-loader": "^0.13.1",
     "svgo": "^0.6.6",
     "svgo-loader": "^1.1.0",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
