--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "bootstrap": "^3.3.6",
+    "bourbon": "^4.2.7",
+    "breakpoint-sass": "^2.7.0",
     "compass-mixins": "^0.12.10",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
@@ -45,10 +47,9 @@
     "sass-loader": "^4.0.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
+    "susy": "^2.2.12",
     "svgo": "^0.6.6",
     "svgo-loader": "^1.1.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "url-loader": "^0.5.7"
   }
 }
