--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test:lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore --cache",
     "watch": "webpack -w --progress --colors",
+    "dev-server": "webpack-dev-server --inline --hot --devtool eval --progress --colors --content-base dist/",
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-de v-server.js",
     "build": "webpack -p --config webpack.production.config.js --progress --profile --colors",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base dist/"
   },
   "author": "Max",
   "license": "MIT",
@@ -33,6 +34,7 @@
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
     "img-loader": "^1.3.1",
     "ionicons": "^2.0.1",
     "jquery": "^2.2.4",
@@ -50,6 +52,9 @@
     "susy": "^2.2.12",
     "svgo": "^0.6.6",
     "svgo-loader": "^1.1.0",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-livereload-plugin": "^0.8.1"
   }
 }
