--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
@@ -39,6 +40,7 @@
     "html-webpack-plugin": "^2.22.0",
     "img-loader": "^1.3.1",
     "ionicons": "^2.0.1",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.4",
     "jshint": "^2.9.2",
     "jshint-loader": "^0.8.3",
@@ -48,6 +50,7 @@
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
     "react-hot-loader": "^1.3.0",
+    "redux-logger": "^2.6.1",
     "sass-loader": "^4.0.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
