--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "author": "Max",
   "license": "MIT",
   "dependencies": {
+    "classnames": "^2.2.5",
+    "lodash": "^4.15.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
+    "axios": "^0.14.0",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
@@ -32,24 +38,35 @@
     "compass-mixins": "^0.12.10",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.4.1",
     "eslint": "^3.1.1",
     "eslint-loader": "^1.4.1",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "history": "^3.0.0",
     "html-webpack-plugin": "^2.22.0",
     "img-loader": "^1.3.1",
+    "immutable": "^3.8.1",
     "ionicons": "^2.0.1",
     "isomorphic-fetch": "^2.2.1",
+    "jasmine": "^2.4.1",
     "jquery": "^2.2.4",
     "jshint": "^2.9.2",
     "jshint-loader": "^0.8.3",
     "json-loader": "^0.5.4",
     "json5-loader": "^0.6.0",
     "jsx-loader": "^0.13.2",
+    "karma": "^1.2.0",
+    "materialize-css": "^0.97.7",
+    "mocha": "^3.0.2",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
+    "react-addons-test-utils": "^15.3.1",
     "react-hot-loader": "^1.3.0",
+    "react-mdl": "^1.7.1",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
     "redux-logger": "^2.6.1",
     "sass-loader": "^4.0.0",
     "source-map-loader": "^0.1.5",
