--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-auto-package",
+  "name": "simple-develop-package",
   "version": "0.0.1",
   "description": "This project is to complie scss/es6/img base64 to build a cross browser files",
   "main": "index.html",
@@ -7,7 +7,6 @@
     "test:lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore --cache",
     "watch": "webpack -w --progress --colors",
     "dev-server": "webpack-dev-server --inline --hot --devtool eval --progress --colors --content-base dist/",
-    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "build": "webpack -p --config webpack.production.config.js --progress --profile --colors",
     "simple-server": "node server.js"
   },
@@ -19,18 +18,19 @@
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
+    "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-1": "^6.22.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-alpha.6",
     "bourbon": "^4.3.3",
     "breakpoint-sass": "^2.7.1",
     "compass-mixins": "^0.12.10",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.3",
-    "enzyme": "^2.7.1",
+    "enzyme": "^2.8.0",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.7.0",
@@ -52,6 +52,10 @@
     "json5-loader": "^1.0.1",
     "jsx-loader": "^0.13.2",
     "karma": "^1.5.0",
+    "material-design-icons": "^3.0.1",
+    "material-icons": "^0.1.0",
+    "material-ui": "^0.17.1",
+    "materialize-css": "^0.98.1",
     "mocha": "^3.2.0",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.1",
@@ -65,7 +69,7 @@
     "uglifyjs-webpack-plugin": "^0.3.1",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
-    "webpack": "^2.3.1",
+    "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
 }
