--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore --cache",
     "watch": "webpack -w --progress --colors",
     "dev-server": "webpack-dev-server --inline --hot --devtool eval --progress --colors --content-base dist/",
+    "hot": "webpack-dev-server",
     "build": "webpack -p --config webpack.production.config.js --progress --profile --colors",
     "simple-server": "node server.js"
   },
@@ -59,6 +60,7 @@
     "mocha": "^3.2.0",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.1",
+    "normalize-scss": "^6.0.0",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.16.0",
