--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "simple-develop-package",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "This project is to complie scss/es6/img base64 to build a cross browser files",
-  "main": "index.html",
+  "main": "./dist/index.html",
   "scripts": {
     "test:lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore --cache",
     "watch": "webpack -w --progress --colors",
@@ -26,20 +26,20 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-1": "^6.22.0",
     "bootstrap": "^4.0.0-alpha.6",
-    "bourbon": "^4.3.3",
+    "bourbon": "^4.3.4",
     "breakpoint-sass": "^2.7.1",
     "compass-mixins": "^0.12.10",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.27.3",
+    "css-loader": "^0.28.0",
     "enzyme": "^2.8.0",
-    "eslint": "^3.18.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
-    "eslint-loader": "^1.7.0",
+    "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.1",
     "history": "^4.6.1",
     "img-loader": "^2.0.0",
     "immutable": "^3.8.1",
@@ -52,26 +52,26 @@
     "json-loader": "^0.5.4",
     "json5-loader": "^1.0.1",
     "jsx-loader": "^0.13.2",
-    "karma": "^1.5.0",
+    "karma": "^1.6.0",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.1.0",
     "material-ui": "^0.17.1",
     "materialize-css": "^0.98.1",
     "mocha": "^3.2.0",
     "node-libs-browser": "^2.0.0",
-    "node-sass": "^4.5.1",
+    "node-sass": "^4.5.2",
     "normalize-scss": "^6.0.0",
     "sass-loader": "^6.0.3",
-    "source-map-loader": "^0.2.0",
-    "style-loader": "^0.16.0",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.16.1",
     "superagent": "^3.5.2",
     "susy": "^2.2.12",
     "svgo": "^0.7.2",
     "svgo-loader": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^0.3.1",
+    "uglifyjs-webpack-plugin": "^0.4.1",
     "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
-    "webpack": "^2.3.2",
+    "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   }
 }
